@@ -28,7 +28,8 @@ import net.mcreator.ui.MCreatorApplication;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.reflections.Reflections;
-import org.reflections.scanners.ResourcesScanner;
+import org.reflections.scanners.Scanners;
+import org.reflections.util.ConfigurationBuilder;
 
 import javax.annotation.Nullable;
 import java.io.File;
@@ -39,12 +40,18 @@ import java.util.*;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
+/**
+ * <p>This class detects and then try to load all builtin or custom {@link Plugin}s. </p>
+ */
 public class PluginLoader extends URLClassLoader {
 
 	private static final Logger LOG = LogManager.getLogger("Plugin Loader");
 
 	public static PluginLoader INSTANCE;
 
+	/**
+	 * <p>Set the value to the INSTANCE variable, so we can access values everywhere in the code.</p>
+	 */
 	public static void initInstance() {
 		INSTANCE = new PluginLoader();
 	}
@@ -54,6 +61,9 @@ public class PluginLoader extends URLClassLoader {
 
 	private final Reflections reflections;
 
+	/**
+	 * <p>The core of the detection and loading</p>
+	 */
 	public PluginLoader() {
 		super(new URL[] {}, null);
 
@@ -68,7 +78,7 @@ public class PluginLoader extends URLClassLoader {
 
 		Collections.sort(pluginsLoadList);
 
-		List<String> idList = pluginsLoadList.stream().map(Plugin::getID).collect(Collectors.toList());
+		List<String> idList = pluginsLoadList.stream().map(Plugin::getID).toList();
 
 		for (Plugin plugin : pluginsLoadList) {
 			if (plugin.getInfo().getDependencies() != null) {
@@ -95,31 +105,52 @@ public class PluginLoader extends URLClassLoader {
 			}
 		}
 
-		this.reflections = new Reflections(new ResourcesScanner(), this);
+		this.reflections = new Reflections(
+				new ConfigurationBuilder().setClassLoaders(new ClassLoader[] { this }).setUrls(getURLs())
+						.setScanners(Scanners.Resources).setExpandSuperTypes(false));
 
 		checkForPluginUpdates();
 	}
 
+	/**
+	 * @param pattern <p>Returned file names will need to follow this {@link Pattern}.</p>
+	 * @return <p>The path into a {@link Plugin} of all files following the provided {@link Pattern}.</p>
+	 */
 	public Set<String> getResources(Pattern pattern) {
 		return this.getResources(null, pattern);
 	}
 
+	/**
+	 * @param pkg <p>The path of directories the method will use to access wanted files. Sub folders need to be split with a dot.</p>
+	 * @return <p>The path into a {@link Plugin} of all files inside the provided folder.</p>
+	 */
 	public Set<String> getResourcesInPackage(String pkg) {
 		return this.getResources(pkg, null);
 	}
 
+	/**
+	 * @param pkg     <p>The path of directories the method will use to access wanted files. Sub folders need to be split with a dot.</p>
+	 * @param pattern <p>Returned file names will need to follow this {@link Pattern}.</p>
+	 * @return <p>The path into a {@link Plugin} of all files inside the provided folder following the provided {@link Pattern} .</p>
+	 */
 	public Set<String> getResources(@Nullable String pkg, @Nullable Pattern pattern) {
 		Set<String> reflectionsRetval =
-				pattern != null ? this.reflections.getResources(pattern) : this.reflections.getResources(e -> true);
+				pattern != null ? this.reflections.getResources(pattern) : this.reflections.getResources(".*");
 		if (pkg == null)
 			return reflectionsRetval;
 		return reflectionsRetval.stream().filter(e -> e.replace("/", ".").startsWith(pkg)).collect(Collectors.toSet());
 	}
 
+	/**
+	 * @return <p> A {@link List} of all loaded plugins.</p>
+	 */
 	public List<Plugin> getPlugins() {
 		return plugins;
 	}
 
+	/**
+	 * @return <p>A list of all plugin updates detected.</p>
+	 */
 	public List<PluginUpdateInfo> getPluginUpdates() {
 		return pluginUpdates;
 	}
@@ -210,7 +241,7 @@ public class PluginLoader extends URLClassLoader {
 					}
 				}
 				return null;
-			}).filter(Objects::nonNull).collect(Collectors.toList()));
+			}).filter(Objects::nonNull).toList());
 		}
 	}
 
