@@ -23,11 +23,11 @@ import net.mcreator.generator.setup.WorkspaceGeneratorSetup;
 import net.mcreator.ui.MCreator;
 import net.mcreator.ui.dialogs.workspace.WorkspaceGeneratorSetupDialog;
 import net.mcreator.ui.init.L10N;
+import net.mcreator.util.FilenameUtilsPatched;
 import net.mcreator.util.GSONClone;
 import net.mcreator.vcs.WorkspaceVCS;
 import net.mcreator.workspace.Workspace;
 import net.mcreator.workspace.settings.WorkspaceSettings;
-import org.apache.commons.io.FilenameUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.eclipse.jgit.api.Git;
@@ -37,7 +37,6 @@ import org.eclipse.jgit.lib.Ref;
 import org.eclipse.jgit.transport.CredentialsProvider;
 
 import javax.swing.*;
-import java.util.stream.Collectors;
 
 public class BranchSwitchAction {
 
@@ -63,15 +62,12 @@ public class BranchSwitchAction {
 				}
 
 				git.reset().setMode(ResetCommand.ResetType.HARD).call();
-				git.checkout().setCreateBranch(
-								!git.branchList().call().stream().map(Ref::getName).collect(Collectors.toList())
-										.contains("refs/heads/" + FilenameUtils.getName(branchToSwitchTo)))
-						.setName(FilenameUtils.getName(branchToSwitchTo)).call();
+				git.checkout().setCreateBranch(!git.branchList().call().stream().map(Ref::getName).toList()
+								.contains("refs/heads/" + FilenameUtilsPatched.getName(branchToSwitchTo)))
+						.setName(FilenameUtilsPatched.getName(branchToSwitchTo)).call();
 
 				// possible refactor after sync start
 				mcreator.getWorkspace().reloadFromFS();
-
-				localWorkspace = mcreator.getWorkspace();
 
 				// if version changed, switch the generator
 				if (!localWorkspace.getWorkspaceSettings().getCurrentGenerator()
@@ -85,8 +81,8 @@ public class BranchSwitchAction {
 				}
 				// possible refactor after sync end
 
-				mcreator.statusBar.setPersistentMessage(
-						L10N.t("statusbar.vcs.switched_working_branch", FilenameUtils.getName(branchToSwitchTo)));
+				mcreator.statusBar.setPersistentMessage(L10N.t("statusbar.vcs.switched_working_branch",
+						FilenameUtilsPatched.getName(branchToSwitchTo)));
 
 				mcreator.statusBar.reloadVCSStatus();
 
